# model/response/system_message_response.go
@@ -9,15 +9,16 @@ type SystemMessagePage struct {
 	Data        []SystemMessageList `json:"data"`
 }
 
-type AdminName struct {
-	Name string `json:"name"` // 组织名
+type UserNames struct {
+	Id       int    `json:"id"`        // 用户ID
+	UserName string `json:"user_name"` // 用户名
 }
 
 type SystemMessageList struct {
-	Id           int    `json:"id"`            //id
-	Title        string `json:"title"`         // 标题
-	BeginTime    time.Time `json:"begin_time"`    //开始时间
-	EndTime      time.Time `json:"end_time"`      //结束时间
-	Status       int8   `json:"status"`        //是否作废 0：否，1：是
-	OrganizeName string `json:"organize_name"` //组织名称
+	Id        int         `json:"id"`         //id
+	Title     string      `json:"title"`      // 标题
+	BeginTime time.Time   `json:"begin_time"` //开始时间
+	EndTime   time.Time   `json:"end_time"`   //结束时间
+	Status    int8        `json:"status"`     //是否作废 0：否，1：是
+	Users     []UserNames `json:"users"`      //用户名称
 }
